data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1120.wast
;; Sure, here is a list of test descriptions designed to highlight differences in how WebAssembly and Wizard Engine handle loop instruction, specifically focusing on edge cases in `br_table`.  1. **Test Description**:    - Construct a loop with a `br_table` where the table index is exactly equal to the number of targets.    - Check if the implementation defaults to the correct target.    - This tests the handling of boundary conditions in `br_table`.    -

(assert_invalid
  (module
    (func $test-br_table-boundary
      (i32.const 0)
      (loop
        (block
          (block
            (br_table 0 1 (i32.const 2))
          )
        )
      end)
    )
  )
  "br_table index out of bounds"
)